--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,8 @@ img:hover {
 .column {
   display: inline-block;
   float: left;
+  width: 48%;
+  margin: auto;
 }
 /* create your tile classes! we recommend .small .med .large */
 .small {
